복습_다크라이트모드

--- a/JS Study/과제/자바_1~2일차/추가과제_다크모드,화이트모드.html
+++ b/JS Study/과제/자바_1~2일차/추가과제_다크모드,화이트모드.html
@@ -32,7 +32,7 @@
         function darkMode(){
             var body = document.body; // 문서의 body 요소를 변수 body에 할당합니다.
             body.classList.add("dark-mode"); //classList 속성은 요소의 클래스에 액세스할수 있게 해줌. 
-            body.classList.remove("white-mode");
+            body.classList.remove("white-mode"); //다크모드를 눌렀을때 배경이 흰색으로 되는걸 막기위해
             
         }
         function whiteMode(){
